samples/_failures_safe/1761378191_b08ca5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_346c6aac.c: In function ‘main’:
./samples/SAFE/__tmp_346c6aac.c:125:5: error: expected declaration or statement at end of input
  125 |     }
      |     ^
